# grpc-web

./: .bazelrc  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Gopkg.toml  Makefile  README.md  WORKSPACE  buf.yaml  go.mod  go.sum  h2_compat_writer.go  handlerz.go  install-buf.sh  install-protobuf.sh  install-protoc.sh  install-prototool.sh  lerna.json  link-npm-modules.sh  lint-all.sh  make_request.py  middleware.go  middleware_test.go  nvm-install.sh  package-lock.json  package.json  publish-release.sh  release.sh  terminator.pb.go  terminator.proto  test-all.sh  tslint.json  wrapper.go  wrapper_test.go
.circleci/: config.yml
.github/: dependabot.yml
client/grpc-web/: .npmignore  README.md  improbable-eng-grpc-web-0.11.0.tgz  package-lock.json  package.json  release.sh  tsconfig.json  webpack.config.js
client/grpc-web-arraybufferxhr-transport/: README.md  package-lock.json  package.json
client/grpc-web-arraybufferxhr-transport/src/: index.ts
client/grpc-web-client/: .gitignore  .npmignore  README.md  package-lock.json  package-lock.json.orig  package.json  package.json.orig  tsconfig.json  webpack.config.js
client/grpc-web-client/docs/: code-generation.md  middleware.md
client/grpc-web-client/src/: client.ts  index.ts  invoke.ts  metadata.ts  middleware.ts  unary.ts
client/grpc-web-core/: .npmignore  package-lock.json  package.json
client/grpc-web-core/docs/: code-generation.md  concepts.md
client/grpc-web-core/src/: client.ts  index.ts  invoke.ts  transport.ts
client/grpc-web-cross-browser-transport/: package-lock.json  package.json
client/grpc-web-cross-browser-transport/src/: fetch.ts  http.ts  index.ts  xhr.ts
client/grpc-web-fake-transport/: .npmignore  README.md  improbable-eng-grpc-web-fake-transport-0.11.0.tgz  package-lock.json  package.json  tsconfig.json
client/grpc-web-node-http-transport/: README.md  package-lock.json  package.json
client/grpc-web-react-example/: README.md  get_go_deps.sh  go.mod  go.sum  package-lock.json  package.json  protogen.sh
client/grpc-web-react-example/go/exampleserver/: BUILD.bazel  exampleserver.go
client/grpc-web-react-native-transport/: README.md  package-lock.json  package.json  tsconfig.json
client/grpc-web-test/: hosts-config.ts  karma.conf.ts  package-lock.json  package.json  protogen_go.sh  start-testserver.sh
client/grpc-web-websocket-transport/: improbable-eng-grpc-web-websocket-transport-0.11.0.tgz  package-lock.json  package.json  tsconfig.json
client/protoc-gen-improbable-grpc-web/: README.md  generate-protos.sh  package-lock.json  package.json
cmd/: handlerz.go  make_request.py
cmd/testproto/: test.pb.go  test.proto  test_service.go
example/: README.md  get_go_deps.sh  install_go_deps.sh  package-lock.json  package.json  protogen.sh
example/cpp/: README.md  build.sh
example/cpp/exampleserver/: CMakeLists.txt  main.cpp
example/go/: Gopkg.toml
example/ts/: index.html  tsconfig.json  webpack.config.js
go/: README.md  checkup.sh  fixup.sh  generate-docs.sh  generate-grpcwebproxy-binaries.sh  lint.sh  protogen.sh
go/demoserver/: .gitignore  demoserver.go  jsonpbcodec.go  test_service.go
go/grpcweb/: BUILD.bazel  DOC.md  doc.go  grpc_web_response.go  grpc_web_response_test.go  header.go  health.go  health_test.go  helpers.go  helpers_internal_test.go  helpers_test.go  options.go  trailer.go  trailer_test.go  websocketChannel.pb.go  websocket_channel.go  websocket_client.go  websocket_clienthub.go  websocket_reader.go  websocket_wrapper.go  websocket_writer.go  wrapper.go  wrapper_test.go
go/grpcwebproxy/: .gitignore  BUILD.bazel  README.md  backend.go  main.go  server_tls.go
go/test/: main.go  server_test.go  testServer.pb.go  testServer.proto  testServer_grpc.pb.go  websocketChannel.pb.go  websocketChannel.proto
grpc-web-node-http-transport/: README.md  package-lock.json  package.json  tsconfig.json
grpc-web-node-http-transport/src/: index.ts
integration_test/: .gitignore  Dockerfile  README.md  browsers.ts  custom-karma-driver.ts  hosts-config.ts  integration-test-ci.sh  karma.conf.ts  package-lock.json  package.json  run-with-testserver.sh  run-with-tunnel.sh  start-testserver.sh  test-ci.sh  test.sh
integration_test/go/_proto/improbable/grpcweb/test/: BUILD.bazel  test.pb.go
integration_test/go/testserver/: BUILD.bazel  testserver.go
integration_test/proto/: buf.gen.yaml  prototool.yaml
integration_test/proto/improbable/grpcweb/test/: BUILD.bazel  test.proto
integration_test/ts/: .babelrc  suiteUtils.ts  tsconfig.json  tslint.json  webpack.config.ts
js/: .gitignore
js/playground/: package.json  protogen.sh  webpack.config.js
jsplayground/: .babelrc  .gitignore  codegen.sh  index.html  package.json  webpack.config.js
jsplayground/src/: grpc_browser.js  index.js  test.proto.json
keypairs/: .gitignore  gen_keypairs.sh  localhost.conf  localhostCA.conf  trace.sh  ubuntu_setup_browsers.sh  ubuntu_trust_ca_cert.sh
misc/: gen_cert.sh  localhost.conf  localhost.crt  localhost.key  localhostCA.conf  localhostCA.pem
protobuf/: websocketChannel.pb.go  websocketChannel.proto  wesocketChannel.sh
test/: .gitignore  README.md  browsers.js  browsers.ts  custom-karma-driver.js  custom-karma-driver.ts  hosts-config.js  hosts-config.ts  http.karma.conf.js  https.karma.conf.js  karma.conf.js  karma.conf.ts  package-lock.json  package.json  protogen_go.sh  protogen_ts.sh  run-karma.sh  run-testserver.sh  run-with-testserver.sh  shared-karma-conf.js  start-testserver.sh  test.sh  travis_matrix_gen.sh
test/ts/: suiteUtils.ts  tsconfig.json  webpack.config.js  webpack.config.ts
test/ts/src/: spec.ts  (+13 more)
testproto/: Makefile  test.proto  test_service.go
testproto/nested/: somenested.proto
ts/: .npmignore  README.md  package-lock.json  package.json  release.sh  rollup.config.js  rollup.config.js.orig  tsconfig.json
ts/docs/: client.md  code-generation.md  concepts.md  invoke.md  transport.md  unary.md
ts/src/: ChunkParser.ts  Code.ts  client.ts  debug.ts  detach.ts  grpc.ts  index.ts  invoke.ts  message.ts  unary.ts  util.ts
(+113 files in other folders)
