load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
  name = "go_default_library",
  srcs = [
    "doc.go",
    "grpc_web_response.go",
    "header.go",
    "helpers.go",
    "options.go",
    "trailer.go",
    "websocket_wrapper.go",
    "wrapper.go",
  ],
  importpath = "github.com/improbable-eng/grpc-web/go/grpcweb",
  visibility = ["//visibility:public"],
  deps = [
    "@com_github_desertbit_timer//:go_default_library",
    "@com_github_gorilla_websocket//:go_default_library",
    "@com_github_rs_cors//:go_default_library",
    "@org_golang_google_grpc//:go_default_library",
    "@org_golang_google_grpc//grpclog:go_default_library",
    "@org_golang_x_net//http2:go_default_library",
  ],
)

# Cannot be compiled because of errors like
# 'undefined grpcweb.Trailer'.
# TODO Fix this test.
go_test(
  name = "go_default_test",
  srcs = [
    #"helpers_internal_test.go",
    #"helpers_test.go",
    "trailer_test.go",
    #"wrapper_test.go",
  ],
  embed = [":go_default_library"],
  deps = [
    ":go_default_library",
    "//integration_test/go/_proto/improbable/grpcweb/test:go_default_library",
    "@com_github_golang_protobuf//proto:go_default_library",
    "@com_github_mwitkow_go_conntrack//connhelpers:go_default_library",
    "@com_github_stretchr_testify//assert:go_default_library",
    "@com_github_stretchr_testify//require:go_default_library",
    "@com_github_stretchr_testify//suite:go_default_library",
    "@io_bazel_rules_go//proto/wkt:empty_go_proto",
    "@org_golang_google_grpc//:go_default_library",
    "@org_golang_google_grpc//codes:go_default_library",
    "@org_golang_google_grpc//credentials:go_default_library",
    "@org_golang_google_grpc//grpclog:go_default_library",
    "@org_golang_google_grpc//metadata:go_default_library",
    "@org_golang_x_net//context:go_default_library",
    "@org_golang_x_net//http2:go_default_library",
  ],
)
