load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
  name = "go_default_library",
  srcs = [
    "backend.go",
    "main.go",
    "server_tls.go",
  ],
  importpath = "github.com/improbable-eng/grpc-web/go/grpcwebproxy",
  visibility = ["//visibility:private"],
  deps = [
    "//go/grpcweb:go_default_library",
    "@com_github_grpc_ecosystem_go_grpc_middleware//:go_default_library",
    "@com_github_grpc_ecosystem_go_grpc_middleware//logging/logrus:go_default_library",
    "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
    "@com_github_mwitkow_go_conntrack//:go_default_library",
    "@com_github_mwitkow_go_conntrack//connhelpers:go_default_library",
    "@com_github_mwitkow_grpc_proxy//proxy:go_default_library",
    "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
    "@com_github_sirupsen_logrus//:go_default_library",
    "@com_github_spf13_pflag//:go_default_library",
    "@org_golang_google_grpc//:go_default_library",
    "@org_golang_google_grpc//credentials:go_default_library",
    "@org_golang_google_grpc//grpclog:go_default_library",
    "@org_golang_google_grpc//metadata:go_default_library",
    "@org_golang_x_net//context:go_default_library",
    "@org_golang_x_net//trace:go_default_library",
  ],
)

go_binary(
  name = "grpcwebproxy",
  embed = [":go_default_library"],
  visibility = ["//visibility:public"],
)