load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
  name = "go_default_library",
  srcs = ["testserver.go"],
  importpath = "github.com/improbable-eng/grpc-web/integration_test/go/testserver",
  visibility = ["//visibility:private"],
  deps = [
    "//go/grpcweb:go_default_library",
    "//integration_test/go/_proto/improbable/grpcweb/test:go_default_library",
    "@io_bazel_rules_go//proto/wkt:empty_go_proto",
    "@org_golang_google_grpc//:go_default_library",
    "@org_golang_google_grpc//codes:go_default_library",
    "@org_golang_google_grpc//grpclog:go_default_library",
    "@org_golang_google_grpc//metadata:go_default_library",
    "@org_golang_x_net//context:go_default_library",
  ],
)

go_binary(
  name = "testserver",
  embed = [":go_default_library"],
  visibility = ["//visibility:public"],
)
