load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
  name = "go_default_library",
  srcs = ["exampleserver.go"],
  importpath = "github.com/improbable-eng/grpc-web/client/grpc-web-react-example/go/exampleserver",
  visibility = ["//visibility:private"],
  deps = [
    "//client/grpc-web-react-example/go/_proto/examplecom/library:go_default_library",
    "//go/grpcweb:go_default_library",
    "@org_golang_google_grpc//:go_default_library",
    "@org_golang_google_grpc//codes:go_default_library",
    "@org_golang_google_grpc//grpclog:go_default_library",
    "@org_golang_google_grpc//metadata:go_default_library",
    "@org_golang_x_net//context:go_default_library",
  ],
)

go_binary(
  name = "exampleserver",
  embed = [":go_default_library"],
  visibility = ["//visibility:public"],
)
