load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
  name = "improbable_grpcweb_test_proto",
  srcs = ["test.proto"],
  visibility = ["//visibility:public"],
  deps = ["@com_google_protobuf//:empty_proto"],
)

go_proto_library(
  name = "improbable_grpcweb_test_go_proto",
  compilers = ["@io_bazel_rules_go//proto:go_grpc"],
  importpath = "github.com/example/project/integration_test/proto/improbable/grpcweb/test",
  proto = ":improbable_grpcweb_test_proto",
  visibility = ["//visibility:public"],
)

go_library(
  name = "go_default_library",
  embed = [":improbable_grpcweb_test_go_proto"],
  importpath = "github.com/example/project/integration_test/proto/improbable/grpcweb/test",
  visibility = ["//visibility:public"],
)