load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
  name = "go_default_library",
  srcs = ["test.pb.go"],
  importpath = "github.com/improbable-eng/grpc-web/integration_test/go/_proto/improbable/grpcweb/test",
  visibility = ["//visibility:public"],
  deps = [
    "@com_github_golang_protobuf//proto:go_default_library",
    "@io_bazel_rules_go//proto/wkt:empty_go_proto",
    "@org_golang_google_grpc//:go_default_library",
  ],
)